Dramatically improved search view for all screen sizes and formats

--- a/src/main/resources/static/css/alovoa-dark.css
+++ b/src/main/resources/static/css/alovoa-dark.css
@@ -1,4 +1,5 @@
-body, .card, .box, .textarea, .footer, .table, .select select, select option{
+body, .card, .box, .textarea, .footer, .table, .select select, select option
+	{
 	background-color: #2e3436;
 }
 
@@ -15,7 +16,7 @@ body *, container *, .label, .textarea, .select select {
 }
 
 .content table td, .content table th {
-	border-color: rgba(219,219,219,.5);
+	border-color: rgba(219, 219, 219, .5);
 	color: white;
 }
 
@@ -25,4 +26,15 @@ body *, container *, .label, .textarea, .select select {
 
 #logout:hover span {
 	color: #0a0a0a;
+}
+
+.content-background {
+	background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%,
+		rgba(46,52,54, 0.9) 10%, rgba(46,52,54, 0.9) 100%);
+}
+
+@media screen and (max-width: 1024px) {
+	.profile-bottom.dimmed {
+		background: rgba(46,52,54, 0.9);
+	}
 }
