--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -64,7 +64,7 @@
 				<div class="field">
 					<label class="label" th:text="#{description}"></label>
 					<textarea class="textarea" id="description"
-						th:text="${user.description}" readOnly></textarea>
+						th:text="${user.description}" style="word-break: break-all;" readOnly></textarea>
 				</div>
 
 				<table class="table" style="width: 100%">
