User can now add and filter by interests (default max is 5) User can now add multiple images besides their profile image (default max is 4)

--- a/src/main/resources/static/css/alovoa.css
+++ b/src/main/resources/static/css/alovoa.css
@@ -1,3 +1,13 @@
+button {
+	cursor: pointer;
+}
+
+.center-parent {
+	display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 #main {
 	min-height: 100vh;
 }
