Added detailed Exceptions when registering Fixed several visual issues

--- a/src/main/resources/static/css/alovoa.css
+++ b/src/main/resources/static/css/alovoa.css
@@ -41,6 +41,7 @@ svg {
 }
 
 .asterisk {
+	float: left;
 	padding-left: 4px;
 	color: red;
 }
@@ -113,6 +114,10 @@ svg {
 
 .hidden {
 	visibility: hidden;
+}
+
+.datetimepicker-clear-button {
+	display: none;
 }
 
 input[type=range].slider {
