--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -175,7 +175,7 @@
 									style="flex: 1" th:placeholder="#{interest}" required>
 								<div style="padding-top: 4px;"></div>
 								<button class="button is-info colored" style="margin-left: 4px;">
-									<i class="fa fa-plus"></i>
+									<i class="fa fa-plus" style="color:white;"></i>
 								</button>
 							</div>
 						</form>
