--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -53,25 +53,57 @@
 		<div class="container">
 			<div class="columns">
 				<div class="column">
-					<ul>
-						<li class="has-text-centered"><a href="/privacy"
-							th:text="#{privacy-policy}"></a></li>
-					</ul>
+					<div class="control has-icons-left">
+						<div class="select">
+							<select id="locale" onchange="onChangeLocal(this)">
+								<option th:text="#{language}" hidden></option>
+								<option value="?lang=en">English</option>
+								<option value="?lang=es">Español</option>
+								<option value="?lang=fr">Français</option>
+								<option value="?lang=de">Deutsch</option>
+								<option value="?lang=pt">Português</option>
+								<option value="?lang=it">Italiano</option>
+								<option value="?lang=ru">русский</option>
+								<option value="?lang=ja">日本語</option>
+								<option value="?lang=zh">中文</option>
+								<option value="?lang=ko">한국어</option>
+								<option value="?lang=hi">हिन्दी</option>
+							</select>
+						</div>
+						<span class="icon is-left"> <i class="fas fa-globe"></i>
+						</span>
+					</div>
 				</div>
 				<div class="column">
-					<ul>
-						<li class="has-text-centered"><a href="/terms-conditions"
-							th:text="#{tos}"></a></li>
-					</ul>
+					<div class="has-text-centered">
+						<a href="/privacy" th:text="#{privacy-policy}"></a>
+					</div>
 				</div>
 				<div class="column">
-					<ul>
-						<li class="has-text-centered"><a href="/imprint"
-							th:text="#{imprint}"></a></li>
-					</ul>
+					<div class="has-text-centered">
+						<a href="/terms-conditions" th:text="#{tos}"></a>
+					</div>
+				</div>
+				<div class="column">
+					<div class="has-text-centered">
+						<a href="/imprint" th:text="#{imprint}"></a>
+					</div>
+				</div>
+				<div class="column">
+					<div class="has-text-centered">
+						<a href="/faq" th:text="#{faq}"></a>
+					</div>
 				</div>
 			</div>
 		</div>
+
+		<script>
+			function onChangeLocal(e) {
+				let val = e.options[e.selectedIndex].value;
+				console.log(val);
+				window.location.search = val;
+			}
+		</script>
 	</footer>
 
 	<div th:fragment="navigation">
