Added TOS and Privacy Policy

--- a/resources/templates/fragments.html
+++ b/resources/templates/fragments.html
@@ -60,7 +60,7 @@
 				</div>
 				<div class="column">
 					<ul>
-						<li class="has-text-centered"><a href="/terms-conditions"
+						<li class="has-text-centered"><a href="/tos"
 							th:text="#{tos}"></a></li>
 					</ul>
 				</div>
