--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -81,7 +81,7 @@
 				</div>
 				<div class="column">
 					<div class="has-text-centered">
-						<a href="/terms-conditions" th:text="#{tos}"></a>
+						<a href="/tos" th:text="#{tos}"></a>
 					</div>
 				</div>
 				<div class="column">
