--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -35,21 +35,7 @@
 										th:placeholder="#{password}" name="password">
 								</div>
 							</div>
-							<div class="field">
-								<input id="captcha-id" name="captchaId" type="hidden">
-
-								<div class="field">
-									<img id="captcha-image">
-									<button type="button" class="button" onclick="refreshCaptcha()"
-										style="height: 70px; width: 70px; font-size: 1.7rem; margin-left: 12px;">
-										<i class="fa fa-sync"></i>
-									</button>
-								</div>
-								<div class="field">
-									<input class="input" id="captcha" name="captchaText"
-										th:placeholder="#{captcha}" autocomplete="off" required>
-								</div>
-							</div>
+							<div th:replace="fragments.html::captcha"></div>
 							<!-- TODO: Causes exception 
 							<div class="field">
 								<label class="checkbox"> <input type="checkbox"
