--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -95,22 +95,7 @@
 							</div>
 						</div> 
 						 -->
-						<div class="field">
-							<label class="label" th:text="#{captcha}"></label> <input
-								id="captcha-id" name="captchaId" type="hidden">
-
-							<div class="field">
-								<img id="captcha-image">
-								<button type="button" class="button" onclick="refreshCaptcha()"
-									style="height: 70px; width: 70px; font-size: 1.7rem; margin-left: 12px;">
-									<i class="fa fa-sync"></i>
-								</button>
-							</div>
-							<div class="field">
-								<input class="input" id="captcha" name="captchaText"
-									autocomplete="off" required>
-							</div>
-						</div>
+						<div th:replace="fragments.html::captcha"></div>
 
 						<div style="height: 24px"></div>
 
