Added support for video chat using the public jitsi client

--- a/src/main/resources/templates/messageDetail.html
+++ b/src/main/resources/templates/messageDetail.html
@@ -25,6 +25,7 @@
 					<img class="profile-pic left" th:src="${partner.profilePicture}">
 					<div class="left" style="padding: 12px;"></div>
 					<div class="left" th:text="${partner.firstName}" id="first-name"></div>
+					<button class="right button colored is-info" style="height: 52px;" onclick="startVideoChat()"><i class="fa fa-video"></i></button>
 				</div>
 			</div>
 			<div class="section">
