Added primary support for oauth with Google and Facebook

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -53,6 +53,15 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="container unauthenticated">
+			<div>
+				With Google: <a href="/oauth2/authorization/google">click here</a>
+			</div>
+			<div>
+				With FB: <a href="/oauth2/authorization/facebook">click here</a>
+			</div>
+		</div>
 	</div>
 	<footer th:replace="fragments.html::footer"></footer>
 
