--- a/src/main/resources/static/css/alovoa.css
+++ b/src/main/resources/static/css/alovoa.css
@@ -132,6 +132,10 @@ input[type=range].slider {
 	#navbar-text {
 		display: none;
 	}
+	
+	#oauth-div button span {
+		font-size: 16px;
+	}
 }
 
 @media screen and (max-width: 700px) {
