--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -18,24 +18,25 @@
 		<header th:replace="fragments.html::header"></header>
 		<div class="section">
 			<div class="container">
-				<div class="column">
+				<h3 class="title" th:text="#{register.title}"></h3>
+				<div class="box">
 					<form th:action="@{/register}" method="POST" id="register-form">
 						<div class="field">
-							<label class="label" th:text="#{first-name}" style="float:left;"></label><span
+							<label class="label" th:text="#{first-name}" style="float: left;"></label><span
 								class="asterisk">*</span>
 							<div class="control">
 								<input class="input" type="text" name="firstName" required>
 							</div>
 						</div>
 						<div class="field">
-							<label class="label" th:text="#{email}" style="float:left;"></label><span
+							<label class="label" th:text="#{email}" style="float: left;"></label><span
 								class="asterisk">*</span>
 							<div class="control">
 								<input class="input" type="email" name="email" required>
 							</div>
 						</div>
 						<div class="field">
-							<label class="label" th:text="#{dob}" style="float:left;"></label><span
+							<label class="label" th:text="#{dob}" style="float: left;"></label><span
 								class="asterisk">*</span>
 							<div class="control">
 								<input type="date" name="dateOfBirth" required>
@@ -62,7 +63,7 @@
 							th:text="#{password-change.warning}"></div>
 
 						<div class="field">
-							<label class="label" th:text="#{gender}" style="float:left;"></label><span
+							<label class="label" th:text="#{gender}" style="float: left;"></label><span
 								class="asterisk">*</span>
 							<div class="select">
 								<select name="gender" required>
@@ -126,9 +127,32 @@
 						</div>
 					</form>
 				</div>
+
+				<div class="container" style="margin-bottom: 48px;" id="oauth-div">
+					<div class="box">
+						<div class="columns">
+							<button class="button is-large colored"
+								style="background-color: #4285F4; width: 100%;"
+								onclick="window.location='/oauth2/authorization/google'">
+								<img src="/img/google-icon.svg" style="height: 48px;"><span
+									style="padding-left: 12px; color: white;"
+									th:text="#{register.oauth.google}"></span>
+							</button>
+							<button class="button is-large colored"
+								style="background-color: #4267b2; width: 100%;"
+								onclick="window.location='/oauth2/authorization/facebook'">
+								<img src="/img/facebook-icon.svg" style="height: 42px;"><span
+									style="padding-left: 12px; color: white;"
+									th:text="#{register.oauth.facebook}"></span>
+							</button>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
+
+
 
 	<footer th:replace="fragments.html::footer"></footer>
 
